# Problem-Solving

./: CMakeLists.txt  Imp. links
At coder/: A - Rotate.cpp  A- Horizon.cpp
Codeforces/:  215A - A. Bicycle Chain.cpp  110A - A. Nearly Lucky Number.cpp  112A - A. Petya and Strings.cpp  116A - A. Tram.cpp  118A - A. String Task.cpp  118B - B. Present from Lena .cpp  118ِ - A. String Task.cpp  1214C - C. Bad Sequence.cpp  122A - A. Lucky Division .cpp  124A - A. The number of positions.cpp  133A - A. HQ9+ .cpp  136A - A. Presents .cpp  139A - A. Petr and Book.cpp  141A - A. Amusing Joke.cpp  144A - A. Arrival of the General .cpp  1452C - C. Two Brackets.cpp  1473A - A. Replacing Elements.cpp  148A - A. Insomnia cure.cpp  149A - A. Business trip.cpp  1511C - C. Yet Another Card Deck.cpp  151A - A. Soft Drinking.cpp  155A - A. I_love_%username%.cpp  158A - A. Next Round.cpp  160A - A. Twins .cpp  165A - A. Supercentral Point.cpp  189A - A. Cut Ribbon.cpp  199A - A. Hexadecimal's theorem.cpp  200B - B. Drinks.cpp  205A - A. Little Elephant and Rozdil.cpp  208A - A. Dubstep .cpp  214A - A. System of Equations.cpp  218B - B. Airport.cpp  219A - A. k-String.cpp  221A - A. Little Elephant and Function.cpp  224A - A. Parallelepiped.cpp  225A - A. Dice Tower.cpp  227B - B. Effective Approach.cpp  228A - A. Is your horseshoe on the other hoof.cpp  228A - A. Is your horseshoe on the other hoof?.cpp  230A - A. Dragons.cpp  (+48 more)
