cmake_minimum_required(VERSION 3.22)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem_Solving main.cpp "Codeforces/231A - A. Team.cpp" "At coder/A- Horizon.cpp" "At coder/A - Rotate.cpp" "Codeforces/158A - A. Next Round.cpp" "Codeforces/50A - A. Domino Piling .cpp" "Codeforces/282A - A. Bit++.cpp" "Codeforces/112A - A. Petya and Strings.cpp" "Codeforces/263A - A. Beautiful Matrix .cpp" "Codeforces/339A - A. Helpful Maths .cpp" "Codeforces/281A - A. Word Capitalization .cpp" "Codeforces/236A - A. Boy or Girl .cpp" "Codeforces/118ِ - A. String Task.cpp" "Codeforces/791A - A. Bear and Big Brother .cpp" "Codeforces/69A - A. Young Physicist .cpp" "Codeforces/96A - A. Football.cpp" "Codeforces/160A - A. Twins .cpp" "Codeforces/122A - A. Lucky Division .cpp" "Codeforces/136A - A. Presents .cpp")
